--- a/src/components/general/css/custom-var.scss
+++ b/src/components/general/css/custom-var.scss
@@ -1,6 +1,8 @@
 $primary-color: #b0c4de !default;
 $base-bg: #b0c4de !default;
 
+$warning: #f77811;
+
 $item-color: #296ac0 !default;
 
 $item-color-master: #22497c !default;
